# ndp-sim

./: .bazelignore  .bazelrc  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  convert_vcd.py  debug_bits.py  test_data_parse.py  test_relative_indexing.py  visualize_trace.py
bitstream/: bit.py  config.py  gen_textbitstream.py  index.py  main.py  parse.py  visualize.py
bitstream/config/: __init__.py  base.py  buffer.py  general.py  loop.py  mapper.py  neighbor.py  special.py  stream.py
config/: config_generator.py  config_generator_ver2.py  config_nse.py  get_parameters.py  get_random_data.py
config/component_config/: buffer_manager_cluster.py  ga_inport_group.py  general_array_pe.py  iga_lc.py  iga_pe.py  iga_row_lc.py  se_nse.py  se_rd_mse.py  se_wr_mse.py  special_array.py
config/config/: __init__.py  config_generator_ver2.py  iga_generator.py  iga_generator_ver2.py  temp.txt
config/config/component_config/: __init__.py  ga_outport_group.py  general_array_pe.py  iga_col_lc.py  se_rd_mse.py  special_array.py
config/config/utils/: bitgen.py  config_parameters_ver1.py  excel_generator.py  module_idx.py
config/utils/: __init__.py  bitgen.py  config_parameters.py  excel_config.py  excel_generator.py  generate_gemm_excel.py  module_idx.py
docs/: UNIFIED_ARCHITECTURE.md  ndp_sim_paper.md
example/: mac_example.cpp  mac_example.json  rvv_alu_example.cpp  rvv_alu_example.json
paper/: ABSTRACT.md  CODESIGN_FRAMEWORK.md  CODESIGN_VISUALIZATION.md  README.md  references.md
paper/appendix/: A-API参考.md  B-代码示例.md
paper/chapter1-event-driven-simulation/: 1.1-基本概念.md  1.2-事件队列设计.md  1.2-事件驱动机制的设计与实现.md  1.3-事件驱动执行的性能优化.md  1.3-调度算法.md  1.4-时间同步与多时钟域.md  1.4-时间模型.md  1.5-性能监测与轨迹捕捉.md  1.5-性能考量.md  1.6-案例分析.md  README.md
paper/chapter2-architecture-modeling/: 2.1-建模框架.md  2.2-Port与通信接口.md  2.3-Component体系设计.md  2.4-Connection与通信协议.md  2.5-流水线的建模与分析.md  2.6-Stage设计的原则与实现.md  2.7-系统集成与同步机制.md  README.md
paper/chapter3-coral-npu/: 3.1-处理器体系架构总览.md  3.2-标量核心的指令流水线.md  3.3-功能单元的设计与优化.md  3.4-寄存器堆与冒险检测.md  3.5-RVV向量执行引擎.md  3.6-微体系结构的优化与扩展.md  3.7-标量与向量的集成设计与性能分析.md  README.md
src/: alu.h  architecture.h  bindings.cpp  buffer.h  common.h  component.h  connection.h  debug.h  event.h  event_base.h  event_example.cpp  event_lambda.h  event_periodic.h  graph.h  main.cpp  node.h  npu.cpp  packet.h  pe.h  pipeline.h  port.h  protocol.h  ready_valid_connection.h  reg.h  scheduler.h  stage.h  tick.h  tick_component.h  tick_connection.h  trace.h
src/comp/: BUILD  alu.h  bru.h  buffer.h  core.h  dram.h  dvu.h  fpu.h  lsu.h  mlu.h  pingpong.h  pipeline.h  regfile.h  rvv_alu.h  rvv_backend.h  rvv_decoder.h  rvv_dispatch.h  rvv_dvu.h  rvv_interface.h  rvv_regfile.h  rvv_retire.h  rvv_rob.h
src/comp/core/: alu.h  bru.h  core.h  csr.h  decode.h  dispatch.h  dvu.h  fetch.h  fpu.h  lsu.h  mlu.h  regfile.h
src/comp/rvv/: rvv_alu.h  rvv_backend.h  rvv_dispatch.h  rvv_dvu.h  rvv_regfile.h  rvv_retire.h  rvv_rob.h
src/components/: adder.h  alu.h  dramsim3_wrapper.h  int_packet.h  lsu.h  lsu_dramsim3.h  multiplier.h  pe.h  pingpong.h  pipeline.h  precision.h  sink.h  source.h  tpu.h  tpu_dramsim3.h
src/conn/: BUILD  credit.h  link.h  ready_valid.h  regf_wire.h  wire.h
src/connections/: credit.h  ready_valid.h
src/events/: compute.h  memory.h
src/examples/: architecture_examples.cpp  event_examples.cpp  gemm_64x64_example.cpp  gemm_operator_tpu_example.cpp  lsu_examples.cpp  pe_examples.cpp  pipeline_examples.cpp  precision_demo.cpp  sw_hw_integration_example.cpp  tpu_dramsim3_examples.cpp  tpu_examples.cpp
src/operators/: base.h  gemm.h  gemm_operator.h  operator_base.h  tile.h  tile_config.h
tests/: BUILD  test_alu.cpp  test_architecture.cpp  test_bru.cpp  test_connect.cpp  test_connection_debug.cpp  test_core.cpp  test_core_dispatch.cpp  test_core_eventdriven.cpp  test_core_rvv_integration.cpp  test_credit_connection.cpp  test_dvu.cpp  test_event.cpp  test_fpu.cpp  test_gemm_operator.cpp  test_inner.cpp  test_lsu.cpp  test_mac_pe.cpp  test_mlu.cpp  test_op_bar.cpp  test_outer.cpp  test_pe.cpp  test_pe_dual_alu.cpp  test_pingpong_connection.cpp  test_pipeline.cpp  test_regfile.cpp  test_rvv_alu.cpp  test_rvv_backend.cpp  test_rvv_dispatch.cpp  test_rvv_dvu.cpp  test_rvv_regfile.cpp  test_rvv_retire.cpp  test_rvv_rob.cpp  test_tpu.cpp  test_transout.cpp
